--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
-h1{
+
+h1 {
      font-family: 'Sedgwick Ave Display', cursive;
      font-size:800%;
      text-align: center;
+}
+
+#title {
+  width: 100%;
+  position: absolute;
 }
 
 h2{
